--- a/backups/1.22.25 - 3.37PM/index copy.html
+++ b/backups/1.22.25 - 3.37PM/index copy.html
@@ -2,15 +2,6 @@
 <html lang="en">
 
 <head>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YJYWC9FGDC"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'G-YJYWC9FGDC');
-    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Steven Casteel's Website</title>
@@ -31,26 +22,13 @@
 </head>
 
 <body>
-    <!-- Purple Banner -->
-    <div class="purple-banner">
-        <div class="purple-banner-content">
-            <p class="scrolling-text">CUSTOM VIDEO GAME MUSIC POWERED BY AI ................. FULL DETAILS IN CONTRACT
-                ................. $20 PER MINUTE OF OUTPUT ................. 30 MINUTES FOR $600 - EVERY 30 MINUTES IS A
-                PRODUCTION BLOCK ................. FIRST PRODUCTION BLOCK DISCOUNTED 33.33% TO $400
-                ................. REVISIONS INCLUDE 60 MINUTES OF COMPLIMENTARY STUDIO TIME, AFTER WHICH ADDITIONAL
-                STUDIO TIME IS BILLED AT $60 PER HOUR ................. CUSTOM VIDEO GAME MUSIC POWERED BY AI
-                ................. FULL DETAILS IN CONTRACT ................. $20 PER MINUTE OF OUTPUT .................
-                30
-                MINUTES FOR $600 - EVERY 30 MINUTES IS A PRODUCTION BLOCK ................. FIRST PRODUCTION BLOCK
-                DISCOUNTED 33.33% TO $400 ................. REVISIONS INCLUDE 60 MINUTES OF COMPLIMENTARY STUDIO TIME,
-                AFTER WHICH ADDITIONAL STUDIO TIME IS
-                BILLED AT $60 PER HOUR .................CUSTOM VIDEO GAME MUSIC POWERED BY AI ................. FULL
-                DETAILS IN CONTRACT ................. $20 PER MINUTE OF OUTPUT ................. 30 MINUTES FOR $600 -
-                EVERY 30 MINUTES IS A PRODUCTION BLOCK ................. FIRST PRODUCTION BLOCK
-                DISCOUNTED 33.33% TO $400 ................. REVISIONS INCLUDE 60 MINUTES OF COMPLIMENTARY STUDIO TIME,
-                AFTER WHICH ADDITIONAL STUDIO TIME IS BILLED AT $60 PER HOUR .................
-            </p>
-        </div>
+    <!-- Red Banner -->
+    <div class="red-banner">
+        <p class="scrolling-text">VIDEO GAME MUSIC BUSINESS LAUNCH! .................... $20 PER MINUTE OF OUTPUT
+            .................... VIDEO GAME MUSIC BUSINESS LAUNCH! .................... $20 PER MINUTE OF OUTPUT
+            .................... VIDEO GAME MUSIC BUSINESS LAUNCH! .................... 20 PER MINUTE OF OUTPUT
+            .................... VIDEO GAME MUSIC BUSINESS LAUNCH! .................... $20 PER MINUTE OF OUTPUT
+        </p>
     </div>
 
     <!-- Contact and Social Links -->
@@ -87,14 +65,9 @@
                     <img src="assets/logo_Internet-Archive__full-text_250px.jpg" alt="Internet Archive"
                         class="social-icon">
                 </a>
-                <a href="https://www.goodreads.com/stevencasteel" target="_blank" class="social-icon-link">
+                <a href="https://www.goodreads.com/stevencasteel" target="_blank"
+                    class="social-icon-link">
                     <img src="assets/logo_Goodreads_full-text_250px.jpg" alt="Goodreads" class="social-icon">
-                </a>
-                <a href="https://github.com/stevencasteel" target="_blank" class="social-icon-link">
-                    <img src="assets/logo_Bluesky_full-text_250px.jpg" alt="Bluesky" class="social-icon">
-                </a>
-                <a href="https://bsky.app/profile/stevencasteel.bsky.social" target="_blank" class="social-icon-link">
-                    <img src="assets/logo_GitHub_full-text_250px.jpg" alt="GitHub" class="social-icon">
                 </a>
             </div>
         </div>
@@ -119,7 +92,7 @@
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen loading="eager"></iframe>
-            <a href="https://drive.proton.me/urls/GQZQKETSD8#XgRQxCNWNb2o" class="download-link">
+            <a href="https://archive.org/details/@stevencasteel" class="download-link">
                 <div class="button-container">
                     <img src="assets/download_contract.png" alt="Download Contract PDF" class="download-button">
                     <img src="assets/download_contract_hover.png" alt="Download Contract PDF"
@@ -288,9 +261,9 @@
     <!-- Site Bottom Text -->
     <section class="site-bottom">
         <img src="assets/site_bottom_text.png" alt="Site Information" class="site-bottom-text">
-    </section>
-
-    <script src="script.js"></script>
-</body>
-
-</html>
+        </section>
+        
+        <script src="script.js"></script>
+        </body>
+        
+        </html>
