Update website files

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen loading="eager"></iframe>
-            <a href="https://drive.proton.me/urls/GQZQKETSD8#XgRQxCNWNb2o" class="download-link">
+            <a href="https://drive.proton.me/urls/GYW5JWDAVG#fC4KyteR0ypb" class="download-link">
                 <div class="button-container">
                     <img src="assets/download_contract.png" alt="Download Contract PDF" class="download-button">
                     <img src="assets/download_contract_hover.png" alt="Download Contract PDF"
