Update website content

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
     <!-- Elf Girl Video -->
     <section class="elf-girl-video-section">
-        <video width="100%" loop muted autoplay playsinline>
+        <video width="100%" muted playsinline>
             Your browser does not support the video tag.
         </video>
     </section>
@@ -190,7 +190,7 @@
 
     <!-- Download Elf Girl Albums -->
     <section class="download-section">
-        <a href="https://archive.org/details/@stevencasteel" class="download-link">
+        <a href="https://archive.org/details/Elf-Girl-001-Through-009-MP3s-320kbps" class="download-link">
             <div class="button-container">
                 <img src="assets/download_elf_girl_albums.png" alt="Download Elf Girl Albums" class="download-button">
                 <img src="assets/download_elf_girl_albums_hover.png" alt="Download Elf Girl Albums"
@@ -212,13 +212,13 @@
 
     <!-- Download Links -->
     <section class="download-links">
-        <a href="https://archive.org/details/@stevencasteel" class="download-link">
+        <a href="https://archive.org/details/anime-according-to-ai-pdf-and-e-book-zip" class="download-link">
             <div class="button-container">
                 <img src="assets/pdf_and_ebook.png" alt="PDF & eBook" class="download-button">
                 <img src="assets/pdf_and_ebook_hover.png" alt="PDF & eBook" class="download-button download-hover">
             </div>
         </a>
-        <a href="https://archive.org/details/@stevencasteel" class="download-link">
+        <a href="https://archive.org/details/ANIME-ACCORDING-TO-AI-320kbps-Audiobook" class="download-link">
             <div class="button-container">
                 <img src="assets/partially_compressed_audiobook.png" alt="Partially Compressed Audiobook"
                     class="download-button">
@@ -226,7 +226,8 @@
                     class="download-button download-hover">
             </div>
         </a>
-        <a href="https://archive.org/details/@stevencasteel" class="download-link">
+        <a href="https://archive.org/details/anime-according-to-ai-source-files-every-book-manuscript-version-research-covers-and-process"
+            class="download-link">
             <div class="button-container">
                 <img src="assets/source_files_and_research.png" alt="Source Files & Research" class="download-button">
                 <img src="assets/source_files_and_research_hover.png" alt="Source Files & Research"
