updated code to fix Safari webM loading... still won't animate properly but the still frame is good enough

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                     class="download-button download-hover">
             </div>
         </a>
-        <a href="https://archive.org/details/@stevencasteel" class="download-link">
+        <a href="https://drive.proton.me/urls/5EH3965HX4#UQygUvz8ZDRU" class="download-link">
             <div class="button-container">
                 <img src="assets/free_anime_folders.png" alt="Free Anime Folders" class="download-button">
                 <img src="assets/free_anime_folders_hover.png" alt="Free Anime Folders"
